# KYLO

./: .env.example  .gitignore  LICENSE  README.md  README_TOOL.md  pyproject.toml  requirements.txt
deploy/: kylo-proxy.service  kylo.env.prod-example  nginx.conf.example
kylo/: auditor.py  cli.py  gemini_analyzer.py  readme_manager.py  secure_storage.py  security_scanner.py  usage_tracker.py  utils.py
scripts/: set_key_noninteractive.py
server/: proxy.py
tests/: gemini_smoke_test.py  run_tests.py
